# routes/mealPlan.js
@@ -1,11 +1,13 @@
 const express = require("express");
 const router = express.Router();
 const mealPlanController = require("../controllers/mealPlanController");
+const ensureAuthenticated = require("../middleware/auth");
 
-router.get("/", mealPlanController.getAllMealPlans);
-router.get("/:id", mealPlanController.getMealPlanById);
-router.post("/", mealPlanController.createMealPlan);
-router.put("/:id", mealPlanController.updateMealPlan);
-router.delete("/:id", mealPlanController.deleteMealPlan);
+// All routes require Google login
+router.get("/", ensureAuthenticated, mealPlanController.getMealPlans);
+router.get("/:id", ensureAuthenticated, mealPlanController.getMealPlanById);
+router.post("/", ensureAuthenticated, mealPlanController.createMealPlan);
+router.put("/:id", ensureAuthenticated, mealPlanController.updateMealPlan);
+router.delete("/:id", ensureAuthenticated, mealPlanController.deleteMealPlan);
 
 module.exports = router;
